A little bit of cleanup Change double quotes to single quotes where possible Move to prepared statements were possible

--- a/cacti/branches/0.8.8/include/config.php.dist
+++ b/cacti/branches/0.8.8/include/config.php.dist
@@ -23,21 +23,21 @@
 */
 
 /* make sure these values refect your actual database/host/user/password */
-$database_type = "mysql";
-$database_default = "cacti";
-$database_hostname = "localhost";
-$database_username = "cactiuser";
-$database_password = "cactiuser";
-$database_port = "3306";
-$database_ssl = false;
+$database_type     = 'mysql';
+$database_default  = 'cacti';
+$database_hostname = 'localhost';
+$database_username = 'cactiuser';
+$database_password = 'cactiuser';
+$database_port     = '3306';
+$database_ssl      = false;
 
 /*
    Edit this to point to the default URL of your Cacti install
    ex: if your cacti install as at http://serverip/cacti/ this
    would be set to /cacti/
 */
-//$url_path = "/cacti/";
+//$url_path = '/cacti/';
 
 /* Default session name - Session name must contain alpha characters */
-//$cacti_session_name = "Cacti";
+//$cacti_session_name = 'Cacti';
 
