--- a/cacti/branches/0.8.8/include/config.php.dist
+++ b/cacti/branches/0.8.8/include/config.php.dist
@@ -22,7 +22,7 @@
  +-------------------------------------------------------------------------+
 */
 
-/* make sure these values refect your actual database/host/user/password */
+/* make sure these values reflect your actual database/host/user/password */
 $database_type     = 'mysql';
 $database_default  = 'cacti';
 $database_hostname = 'localhost';
