Add snmp system information gathering

--- a/spine/branches/0.8.8/configure.ac
+++ b/spine/branches/0.8.8/configure.ac
@@ -21,6 +21,8 @@ AC_ARG_WITH(static,
   [CFLAGS="-static $CFLAGS"]
 )
 
+AC_CONFIG_MACRO_DIR([m4])
+
 # mysql
 AC_ARG_WITH(mysql,
   AC_HELP_STRING(
@@ -237,73 +239,9 @@ if test -n "$MYSQL_LIB_DIR" ; then
 fi
 CFLAGS="-I$MYSQL_INC_DIR $CFLAGS"
 
-AC_CHECK_LIB(mysqlclient_r,mysql_init, LIBS="-lmysqlclient_r $LIBS",
+AC_CHECK_LIB(mysqlclient_r,mysql_init, LIBS="-lmysqlclient_r",
   AC_MSG_ERROR([MySQL libraries not found])
 )
-
-AC_CHECK_LIB(mysqlclient_r,mysql_thread_init,[],
-  AC_DEFINE(OLD_MYSQL, 1, [Old MySQL version])
-)
-
-# ****************** Net-SNMP/UCD-SNMP Checks ***********************
-
-# Determine UCD or Net-SNMP installation paths
-if test "x$SNMP_DIR" != "x"; then
-  for i in / /ucd-snmp /include/ucd-snmp; do
-    test -f $SNMP_DIR/$i/snmp.h             && SNMP_INCDIR=$SNMP_DIR$i && break
-  done
-
-  for i in / /net-snmp /include/net-snmp; do
-    test -f $SNMP_DIR/$i/net-snmp-config.h  && SNMP_INCDIR=$SNMP_DIR$i && break
-  done
-
-  # Accomodate 64-Bit Libraries
-  test -f $SNMP_DIR/lib64/libsnmp.a -o -f $SNMP_DIR/lib64/libsnmp.$ShLib       && SNMP_LIBDIR=$SNMP_DIR/lib64
-  test -f $SNMP_DIR/lib64/libnetsnmp.a -o -f $SNMP_DIR/lib64/libnetsnmp.$ShLib && SNMP_LIBDIR=$SNMP_DIR/lib64
-
-  if test -z "$SNMP_LIBDIR"; then
-    # Accomodate 32-Bit Libraries
-    test -f $SNMP_DIR/lib/libsnmp.a -o -f $SNMP_DIR/lib/libsnmp.$ShLib       && SNMP_LIBDIR=$SNMP_DIR/lib
-    test -f $SNMP_DIR/lib/libnetsnmp.a -o -f $SNMP_DIR/lib/libnetsnmp.$ShLib && SNMP_LIBDIR=$SNMP_DIR/lib
-  fi
-else
-  for i in /usr /usr/local /usr/include /usr/pkg/include /usr/local/include /opt /opt/ucd-snmp /opt/net-snmp /opt/snmp; do
-    test -f $i/snmp.h                                  && SNMP_INCDIR=$i                       && break
-    test -f $i/ucd-snmp/snmp.h                         && SNMP_INCDIR=$i/ucd-snmp              && break
-    test -f $i/include/net-snmp/net-snmp-config.h      && SNMP_INCDIR=$i/include/net-snmp      && break
-    test -f $i/net-snmp/net-snmp-config.h              && SNMP_INCDIR=$i/net-snmp              && break
-    test -f $i/net-snmp/include/net-snmp-config.h      && SNMP_INCDIR=$i/net-snmp/include      && break
-    test -f $i/snmp/snmp.h                             && SNMP_INCDIR=$i/snmp                  && break
-    test -f $i/snmp/include/ucd-snmp/snmp.h            && SNMP_INCDIR=$i/snmp/include/ucd-snmp && break
-    test -f $i/snmp/include/net-snmp/net-snmp-config.h && SNMP_INCDIR=$i/snmp/include/net-snmp && break
-  done
-
-  # Accomodate 64-Bit Libraries
-  for i in /usr /usr/local /usr/pkg /usr/snmp /opt /opt/net-snmp /opt/ucd-snmp /opt/snmp /usr/local/snmp; do
-    test -f $i/lib64/libsnmp.a -o -f $i/lib64/libsnmp.$ShLib       && SNMP_LIBDIR=$i/lib64 && break
-    test -f $i/lib64/libnetsnmp.a -o -f $i/lib64/libnetsnmp.$ShLib && SNMP_LIBDIR=$i/lib64 && break
-  done
-
-  # Only check for 32 Bit libraries if the 64 bit are not found
-  if test -z "$SNMP_LIBDIR"; then
-    # Accomodate 32-Bit Libraries
-    for i in /usr /usr/local /usr/pkg /usr/snmp /opt /opt/net-snmp /opt/ucd-snmp /opt/snmp /usr/local/snmp; do
-      test -f $i/lib/libsnmp.a -o -f $i/lib/libsnmp.$ShLib       && SNMP_LIBDIR=$i/lib && break
-      test -f $i/lib/libnetsnmp.a -o -f $i/lib/libnetsnmp.$ShLib && SNMP_LIBDIR=$i/lib && break
-    done
-  fi
-fi
-
-if test -z "$SNMP_INCDIR"; then
-  if test "x$SNMP_DIR" != "x";then
-    AC_MSG_ERROR(Cannot find SNMP header files under $SNMP_DIR)
-  else
-    AC_MSG_ERROR(Cannot find SNMP headers.  Use --with-snmp= to specify non-default path.)
-  fi
-fi
-
-LDFLAGS="-L$SNMP_LIBDIR $LDFLAGS"
-CFLAGS="-I$SNMP_INCDIR -I$SNMP_INCDIR/.. $CFLAGS"
 
 # Net/UCD-SNMP includes v3 support and insists on crypto unless compiled --without-openssl
 AC_MSG_CHECKING([if UCD-SNMP needs crypto support])
@@ -334,19 +272,7 @@ AC_TRY_COMPILE([ #include <net-snmp-config.h>
 )
 AC_DEFINE_UNQUOTED(SNMP_LOCALNAME, $havelocalname, If snmp localname session structure member exists)
 
-AC_CHECK_LIB(netsnmp, snmp_timeout,
-  [ LIBS="-lnetsnmp $LIBS"
-    AC_DEFINE(USE_NET_SNMP, 1, New Net SNMP Version)
-    USE_NET_SNMP=yes ],
-  [ AC_MSG_RESULT(Cannot find NET-SNMP libraries(snmp)... checking UCD-SNMP)
-    USE_NET_SNMP=no ]
-)
-
-if test "$USE_NET_SNMP" = "no"; then
-  AC_CHECK_LIB(snmp, snmp_timeout,
-    LIBS="-lsnmp $LIBS",
-    AC_MSG_ERROR(Cannot find UCD-SNMP libraries(snmp)))
-fi
+AC_CHECK_LIB(netsnmp, snmp_timeout)
 
 # ****************** Spine Result Buffer Check ***********************
 # Check for the default spine output buffer size
