--- a/spine/tags/0.8.8e/configure.ac
+++ b/spine/tags/0.8.8e/configure.ac
@@ -234,6 +234,8 @@ for i in $MYSQL_DIR /usr /usr/local /opt /opt/mysql /usr/pkg /usr/local/mysql; d
   MYSQL_LIB_CHK($i/lib/mysql)
 done
 
+# Required for Ubuntu
+LDFLAGS="-lm -lpthread"
 if test -n "$MYSQL_LIB_DIR" ; then
   LDFLAGS="-L$MYSQL_LIB_DIR $LDFLAGS"
 fi
