Really really fix Ubuntu issue and not break others

--- a/spine/tags/0.8.8e/configure.ac
+++ b/spine/tags/0.8.8e/configure.ac
@@ -60,6 +60,8 @@ case $host_alias in
   AC_DEFINE(HAVE_LIBPTHREAD, 1);;
 *darwin*)
   ShLib="dylib";;
+*)
+  LDFLAGS="-lpthread -lm";;
 esac
 
 # Checks for programs.
@@ -234,8 +236,6 @@ for i in $MYSQL_DIR /usr /usr/local /opt /opt/mysql /usr/pkg /usr/local/mysql; d
   MYSQL_LIB_CHK($i/lib/mysql)
 done
 
-# Required for Ubuntu
-LDFLAGS="-lm -lpthread"
 if test -n "$MYSQL_LIB_DIR" ; then
   LDFLAGS="-L$MYSQL_LIB_DIR $LDFLAGS"
 fi
