bug:0002604: cacti-spine, configure script ignores LDFLAGS in certain situations

--- a/spine/tags/0.8.8f/configure.ac
+++ b/spine/tags/0.8.8f/configure.ac
@@ -61,7 +61,7 @@ case $host_alias in
 *darwin*)
   ShLib="dylib";;
 *)
-  LDFLAGS="-lpthread -lm";;
+  LDFLAGS="-lpthread -lm $LDFLAGS";;
 esac
 
 # Checks for programs.
