-bug:0002380: please build man page for spine

--- a/spine/tags/0.8.8g/Makefile.am
+++ b/spine/tags/0.8.8g/Makefile.am
@@ -6,3 +6,8 @@ configdir = $(sysconfdir)
 config_DATA = spine.conf.dist
 
 bin_PROGRAMS = spine
+
+man_MANS = spine.1
+
+spine.1: spine.c 
+	$(HELP2MAN) --output=$@ --name='Data Collector for Cacti' --no-info --version-string='$(VERSION)' ./spine
